# StreamOS

./: .dockerignore  .env.compose.example  .env.example  .env.test.example  .gitattributes  .gitignore  .prettierignore  .vercelignore  AGENTS.md  Dockerfile.api-gateway  Dockerfile.automation-service  Dockerfile.clip-worker  Dockerfile.content-job-retry-worker  Dockerfile.publishing-scheduler-worker  Dockerfile.publishing-worker  Dockerfile.release-gate-runner  Dockerfile.repurposing-worker  Dockerfile.stream-job-worker  Dockerfile.transcription-worker  README.md  app.js  audit-baseline-staging.md  compose.yaml  eslint.config.mjs  index.html  main.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  styles.css  tsconfig.eslint.json  turbo.json  vercel.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
docs/: ai-assistant-activation-proof-collection-report-2026-06-30.md  (+58 more)
services/automation-service/: pyproject.toml
services/automation-service/src/: ai_assistant_backend_contract.py  ai_assistant_downstream_contract.py  ai_context_boundary.py  ai_context_retrieval_adapters.py  ai_guardrails.py  ai_trusted_context_client.py  ai_usage_context_enforcement.py  entitlement_assertions.py  main.py  openai_client.py  premium_runtime_enforcement.py  runtime_provenance.py  schemas.py  settings.py  ssrf.py
services/automation-service/tests/: test_ai_assistant_downstream_contract.py  test_ai_assistant_gateway_contract_fixture.py  test_ai_boundaries.py  test_entitlement_assertions.py  test_premium_runtime_enforcement.py  test_runtime_provenance.py
(+597 files in other folders)
