[project]
name = "streamos-automation-service"
version = "0.1.0"
description = "FastAPI service for StreamOS clip generation and AI automation pipelines."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
