[project]
name = "streamos-automation-service"
version = "0.1.0"
description = "FastAPI service for StreamOS clip generation and AI automation pipelines."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.138.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0"
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0"
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
